Ændring af hjem + start på projekter 15/05

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <nav class="navbar">
-        <img src="logo.png" alt="logo" class="logo">
         <ul>
             <li><a href="#">Projekter</a></li>
             <li><a href="#">Om mig</a></li>
@@ -25,5 +24,22 @@
         <br>
         <h1 class="heading">jeg er Rose</h1>
     </section>
+    <div class="images">
+        <img src="shapes3.png" class="shape">
+        <img src="bgcut.png" class="bgcut">
+    </div>
+
+    <section id="Projekter">
+        <h1 class="heading">Projekter</h1>
+    <div class="gallery">
+        <img src="images/sapphic_post.png" alt="plakat">
+        <img src="images/anguish.jpg" alt="moving art">
+        <img src="images/fuglabokin_app.png" alt="app">
+        <img src="images/endo4.png" alt="dokumentar">
+        <img src="images/lys1.JPG" alt="foto">
+        <img src="images/pin1.jpg" alt="plakat">
+    </div>
+    </section>
+
 </body>
 </html>
