--- a/index.html
+++ b/index.html
@@ -23,22 +23,47 @@
         <h1 class="heading">Hejsa,</h1>
         <br>
         <h1 class="heading">jeg er Rose</h1>
-    </section>
     <div class="images">
         <img src="shapes3.png" class="shape">
         <img src="bgcut.png" class="bgcut">
     </div>
+</section>
 
     <section id="Projekter">
         <h1 class="heading">Projekter</h1>
     <div class="gallery">
         <img src="images/sapphic_post.png" alt="plakat">
-        <img src="images/anguish.jpg" alt="moving art">
+        <img src="images/anguish.png" alt="moving art">
         <img src="images/fuglabokin_app.png" alt="app">
         <img src="images/endo4.png" alt="dokumentar">
-        <img src="images/lys1.JPG" alt="foto">
-        <img src="images/pin1.jpg" alt="plakat">
+        <img src="images/lys1.png" alt="foto">
+        <img src="images/pin1.png" alt="plakat">
     </div>
+    </section>
+
+    <section id="Kompetencer">
+        <h1 class="heading">Kompetencer</h1>
+        <div class="row">
+            <div class="box">
+                <img src="images/some.png" alt="some">
+            <h2 class="heading">SOME</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="box">
+            <img src="images/ux.png" alt="ux/ui">
+            <h2 class="heading">UX/UI</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+            <div class="box">
+                <img src="images/camera.png" alt="foto">
+            <h2 class="heading">Foto</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="box">
+            <img src="images/video.png" alt="videocam">
+            <h2 class="heading">Video</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
     </section>
 
 </body>
