--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -24,8 +27,8 @@
         <br>
         <h1 class="heading">jeg er Rose</h1>
     <div class="images">
-        <img src="shapes3.png" class="shape">
-        <img src="bgcut.png" class="bgcut">
+        <img src="shapes3.png" alt="shapes" class="shape">
+        <img src="bgcut.png" alt="mig" class="bgcut">
     </div>
 </section>
 
@@ -64,6 +67,7 @@
             <h2 class="heading">Video</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
+    </div>
     </section>
 
 </body>
