--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@
     </div>
     </section>
 
+    <section id="om">
+        <h1 class="heading">Om mig</h1>
+        <div class="om">
+            <img src="images/om.png" alt="mig">
+            <div class="navn">
+                <h2>Rose Østli Talbo</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolor vero cum est repudiandae pariatur non delectus voluptatem veniam eaque illum vitae atque sit at fugit impedit ducimus aperiam, tempore facilis. Reprehenderit pariatur minima odit dicta libero omnis quos deleniti deserunt sint sunt iusto, porro rerum eos ipsam quasi maiores facere. Praesentium, nam perspiciatis. Eos, esse ut! Accusamus quidem id commodi facere suscipit illum consectetur tempore molestiae, nulla, debitis animi. Voluptatem laudantium voluptatibus quo quidem quasi consequuntur aut repellendus facilis quam eveniet cumque, eius debitis velit. Exercitationem delectus eos nobis assumenda nesciunt, fugit aspernatur laudantium mollitia. Tenetur facere ratione error amet assumenda fugiat dolore eum est quaerat dolor! Architecto velit eum rerum veniam sint dolorem sapiente temporibus dolorum placeat, saepe ipsum fugiat magnam alias voluptates? Sit nesciunt hic laboriosam omnis vitae molestias ratione ad quasi harum et ipsa alias tempora voluptatum architecto libero id illo, quaerat impedit aperiam qui numquam?</p>
+            </div>
+        </div>
+    </section>
+
     <section id="Kompetencer">
         <h1 class="heading">Kompetencer</h1>
         <div class="row">
