Ny Projekter + Kontaktformular

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="#">Projekter</a></li>
-            <li><a href="#">Om mig</a></li>
-            <li><a href="#">Kompetencer</a></li>
-            <li><a href="#">Kontakt</a></li>
+            <li><a href="#Projekter">Projekter</a></li>
+            <li><a href="#om">Om mig</a></li>
+            <li><a href="#Kompetencer">Kompetencer</a></li>
+            <li><a href="#contact">Kontakt</a></li>
         </ul>
     </nav>
 
@@ -32,17 +32,70 @@
     </div>
 </section>
 
-    <section id="Projekter">
-        <h1 class="heading">Projekter</h1>
-    <div class="gallery">
-        <img src="images/sapphic_post.png" alt="plakat">
-        <img src="images/anguish.png" alt="moving art">
-        <img src="images/fuglabokin_app.png" alt="app">
-        <img src="images/endo4.png" alt="dokumentar">
-        <img src="images/lys1.png" alt="foto">
-        <img src="images/pin1.png" alt="plakat">
+<section id="Projekter">
+    <h1 class="heading">Projekter</h1>
+    <div class="wrapper">
+        <div class="container">
+            <div class="hero-section">
+                <div class="gallery">
+                    <div class="image-section">
+                        <img src="images/sapphic_post.png" alt="plakat">
+                    </div>
+                    <div class="caption">
+                        <h1>Sapphic Events</h1>
+                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                    </div>
+                </div>
+                <div class="gallery">
+                    <div class="image-section">
+                        <img src="images/anguish.png" alt="moving art">
+                    </div>
+                    <div class="caption">
+                        <h1>Sapphic Events</h1>
+                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                    </div>
+                </div>
+                <div class="gallery">
+                    <div class="image-section">
+                        <img src="images/fuglabokin_app.png" alt="app">
+                    </div>
+                    <div class="caption">
+                        <h1>Sapphic Events</h1>
+                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                    </div>
+                </div>
+                <div class="gallery">
+                    <div class="image-section">
+                        <img src="images/endo4.png" alt="dokumentar">
+                    </div>
+                    <div class="caption">
+                        <h1>Sapphic Events</h1>
+                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                    </div>
+                </div>
+                <div class="gallery">
+                    <div class="image-section">
+                        <img src="images/lys1.png" alt="foto">
+                    </div>
+                    <div class="caption">
+                        <h1>Sapphic Events</h1>
+                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                    </div>
+                </div>
+                <div class="gallery">
+                    <div class="image-section">
+                        <img src="images/pin1.png" alt="plakat">
+                    </div>
+                    <div class="caption">
+                        <h1>Sapphic Events</h1>
+                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    </section>
+</section>
+
 
     <section id="om">
         <h1 class="heading">Om mig</h1>
@@ -80,6 +133,16 @@
         </div>
     </div>
     </section>
+
+<section id="contact">
+    <h1 class="heading">Kontakt mig</h1>
+    <form action="" class="form">
+        <input type="text" name="name" class="input" placeholder="Dit navn">
+        <input type="email" name="email" class="input" placeholder="Din E-mail">
+        <textarea name="message" id="message" cols="70" rows="20" placeholder="Skriv din besked her.."></textarea>
+        <input type="submit" value="Send" id="submit">
+    </form>
+</section>
 
 </body>
 </html>
