Indsætning af tekst

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         <img src="images/sapphic_post.png" alt="plakat">
                     </div>
                     <div class="caption">
-                        <h1>Sapphic Events</h1>
-                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                        <h1>Sapphic X Lambda</h1>
+                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ initiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda. Herunder en plakat, instagram story og et instagram opslag. Derudover lavede jeg dem også et nyt logo. Plakaterne blev hængt op i byen og på uddannelsesinstitutioner og eventet var en succes. </p>
                     </div>
                 </div>
                 <div class="gallery">
@@ -51,8 +51,9 @@
                         <img src="images/anguish.png" alt="moving art">
                     </div>
                     <div class="caption">
-                        <h1>Sapphic Events</h1>
-                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                        <h1>Moving Art</h1>
+                        <p>Som en del af min uddannelse i multimediedesigndeltog jeg i en workshop i Adobe After Effects. Her var opgaven at få et kunstværk til at bevæge sig. Jeg valgte maleriet Anguish af Friedrich Albrecht Schneck. 
+                            Nu flyver og bevæger kragerne sig og man kan se fårets ånde i kulden. Efter workshoppen blev der uddelt priser og min modtog prisen for ”best production”.</p>
                     </div>
                 </div>
                 <div class="gallery">
@@ -60,8 +61,8 @@
                         <img src="images/fuglabokin_app.png" alt="app">
                     </div>
                     <div class="caption">
-                        <h1>Sapphic Events</h1>
-                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                        <h1>Fuglabókin App</h1>
+                        <p>I faget Medieproduktion Apps på medievidenskab, udviklede jeg som en del af en gruppe, konceptet og en prototype af en app om færøske fugle. Med appen kan man identificere fugle med sit kamera, samt dele sine spottings med venner på appen og stige i levels. Jeg stod for det æstetiske udtryk af appen og lavede prototypen i Adobe XD. Projektet blev efter en mundtlig eksamen bedømt med et flot 12-tal. </p>
                     </div>
                 </div>
                 <div class="gallery">
@@ -69,8 +70,8 @@
                         <img src="images/endo4.png" alt="dokumentar">
                     </div>
                     <div class="caption">
-                        <h1>Sapphic Events</h1>
-                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                        <h1>Endometriose - Med tabuet på date</h1>
+                        <p>I valgfaget Medieproduktion - Dokumentar på medievidenskab lavede vi som et team en dokumentar om lidelsen endometriose. Konceptet udviklede vi i fællesskab. Under optagelser var jeg på kamera og lys. I postproduktionen klippede vi filmen i Final Cut Pro, hvor jeg stod for de grafiske elementer og udtryk. Efter en mundtlig eksamen fik vi et 10-tal for vores projekt. </p>
                     </div>
                 </div>
                 <div class="gallery">
@@ -78,8 +79,8 @@
                         <img src="images/lys1.png" alt="foto">
                     </div>
                     <div class="caption">
-                        <h1>Sapphic Events</h1>
-                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                        <h1>Fotoprojekt</h1>
+                        <p>Fordi jeg gerne ville øve mig i at bruge de manuelle indstillinger på mit spejlreflekskamera, lokkede jeg min veninde til at stå model for et ”bare for sjov” fotoprojekt. Jeg ville gerne lege med lys og skygge og se om jeg kunne få nogle flotte fotografier ud af det, samt udfordre mig selv lidt.</p>
                     </div>
                 </div>
                 <div class="gallery">
@@ -87,8 +88,8 @@
                         <img src="images/pin1.png" alt="plakat">
                     </div>
                     <div class="caption">
-                        <h1>Sapphic Events</h1>
-                        <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ intiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda</p>
+                        <h1>Pinterest opslag</h1>
+                        <p>Da jeg under medievidenskab var i praktik hos influenceren Maria Møller, lavede jeg hende en række pinterest opslag som kunne linke videre til hendes webshop, hvor kun sælger forskellige guides til kreative projekter. Opslaget om tasken af en dækkeserviet har fået 4,1k impressions, 94 pin clicks og 20 saves.</p>
                     </div>
                 </div>
             </div>
@@ -111,28 +112,53 @@
     <section id="Kompetencer">
         <h1 class="heading">Kompetencer</h1>
         <div class="row">
-            <div class="box">
-                <img src="images/some.png" alt="some">
+          <div class="box">
+            <img src="images/some.png" alt="some">
             <h2 class="heading">SOME</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="box">
+            <ul>
+              <li><span>Skabe kreativt, engagerende og målgruppeorienteret indhold</span></li>
+              <li><span>Stærke skriftlige og mundtlige kommunikationsevner</span></li>
+              <li><span>Udvikle og implementere effektive mediestrategier</span></li>
+              <li><span>Grundlæggende viden om SEO-principper og SEM-teknikker</span></li>
+              <li><span>Aktivt engageret i Sociale medier og online tendenser, samt ændringer i algoritmer og funktioner</span></li>
+            </ul>
+          </div>
+          <div class="box">
             <img src="images/ux.png" alt="ux/ui">
             <h2 class="heading">UX/UI</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-            <div class="box">
-                <img src="images/camera.png" alt="foto">
+            <ul>
+              <li><span>Design af intuitive brugergrænseflader</span></li>
+              <li><span>Skabe æstetisk tiltalende designs</span></li>
+              <li><span>Indsamling og analyse af brugerdata</span></li>
+              <li><span>Oprettelse af wireframes og prototyper</span></li>
+              <li><span>Erfaring med designværktøjer Figma og Adobe XD</span></li>
+            </ul>
+          </div>
+          <div class="box">
+            <img src="images/camera.png" alt="foto">
             <h2 class="heading">Foto</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="box">
+            <ul>
+              <li><span>Portræt og eventfotografering</span></li>
+              <li><span>Billedredigering og retouching med Adobe Photoshop og Lightroom</span></li>
+              <li><span>Skabe visuelt tiltalende kompositioner</span></li>
+              <li><span>Beherskelse af lysopsætning med naturlig og kunstig belysning</span></li>
+              <li><span>Grundlæggende kendskab til DSLR- og spejlløse kameraer</span></li>
+            </ul>
+          </div>
+          <div class="box">
             <img src="images/video.png" alt="videocam">
             <h2 class="heading">Video</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <ul>
+              <li><span>Erfaring med optagelse af fiktive historier samt dokumentaroptagelser</span></li>
+              <li><span>Videoredigering og farvekorrektion i Adobe Premiere Pro, Final Cut Pro og Avid Media Composer</span></li>
+              <li><span>Beherskelse af naturlig og kunstig belysning</span></li>
+              <li><span>Erfaring med mikrofoner og lydredigering</span></li>
+              <li><span>Planlægning og gennemførelse af videoprojekter</span></li>
+            </ul>
+          </div>
         </div>
-    </div>
-    </section>
+      </section>
+      
 
 <section id="contact">
     <h1 class="heading">Kontakt mig</h1>
