--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
 
-    <section id="home">
+<section id="home">
         <h1 class="heading">Hejsa,</h1>
         <br>
         <h1 class="heading">jeg er Rose</h1>
@@ -42,7 +42,7 @@
                         <img src="images/sapphic_post.png" alt="plakat">
                     </div>
                     <div class="caption">
-                        <h1>Sapphic X Lambda</h1>
+                        <h2>Sapphic X Lambda</h2>
                         <p>Jeg har lavet en række markedsføringsmateriale til det odenseanske LGBTQ+ initiativ Sapphic Events i forbindelse med et event de holdte i samarbejde med Lambda. Herunder en plakat, instagram story og et instagram opslag. Derudover lavede jeg dem også et nyt logo. Plakaterne blev hængt op i byen og på uddannelsesinstitutioner og eventet var en succes. </p>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                         <img src="images/anguish.png" alt="moving art">
                     </div>
                     <div class="caption">
-                        <h1>Moving Art</h1>
+                        <h2>Moving Art</h2>
                         <p>Som en del af min uddannelse i multimediedesigndeltog jeg i en workshop i Adobe After Effects. Her var opgaven at få et kunstværk til at bevæge sig. Jeg valgte maleriet Anguish af Friedrich Albrecht Schneck. 
                             Nu flyver og bevæger kragerne sig og man kan se fårets ånde i kulden. Efter workshoppen blev der uddelt priser og min modtog prisen for ”best production”.</p>
                     </div>
@@ -61,7 +61,7 @@
                         <img src="images/fuglabokin_app.png" alt="app">
                     </div>
                     <div class="caption">
-                        <h1>Fuglabókin App</h1>
+                        <h2>Fuglabókin App</h2>
                         <p>I faget Medieproduktion Apps på medievidenskab, udviklede jeg som en del af en gruppe, konceptet og en prototype af en app om færøske fugle. Med appen kan man identificere fugle med sit kamera, samt dele sine spottings med venner på appen og stige i levels. Jeg stod for det æstetiske udtryk af appen og lavede prototypen i Adobe XD. Projektet blev efter en mundtlig eksamen bedømt med et flot 12-tal. </p>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                         <img src="images/endo4.png" alt="dokumentar">
                     </div>
                     <div class="caption">
-                        <h1>Endometriose - Med tabuet på date</h1>
+                        <h2>Endometriose - Med tabuet på date</h2>
                         <p>I valgfaget Medieproduktion - Dokumentar på medievidenskab lavede vi som et team en dokumentar om lidelsen endometriose. Konceptet udviklede vi i fællesskab. Under optagelser var jeg på kamera og lys. I postproduktionen klippede vi filmen i Final Cut Pro, hvor jeg stod for de grafiske elementer og udtryk. Efter en mundtlig eksamen fik vi et 10-tal for vores projekt. </p>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         <img src="images/lys1.png" alt="foto">
                     </div>
                     <div class="caption">
-                        <h1>Fotoprojekt</h1>
+                        <h2>Fotoprojekt</h2>
                         <p>Fordi jeg gerne ville øve mig i at bruge de manuelle indstillinger på mit spejlreflekskamera, lokkede jeg min veninde til at stå model for et ”bare for sjov” fotoprojekt. Jeg ville gerne lege med lys og skygge og se om jeg kunne få nogle flotte fotografier ud af det, samt udfordre mig selv lidt.</p>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                         <img src="images/pin1.png" alt="plakat">
                     </div>
                     <div class="caption">
-                        <h1>Pinterest opslag</h1>
+                        <h2>Pinterest opslag</h2>
                         <p>Da jeg under medievidenskab var i praktik hos influenceren Maria Møller, lavede jeg hende en række pinterest opslag som kunne linke videre til hendes webshop, hvor kun sælger forskellige guides til kreative projekter. Opslaget om tasken af en dækkeserviet har fået 4,1k impressions, 94 pin clicks og 20 saves.</p>
                     </div>
                 </div>
@@ -105,6 +105,8 @@
             <div class="navn">
                 <h2>Rose Østli Talbo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolor vero cum est repudiandae pariatur non delectus voluptatem veniam eaque illum vitae atque sit at fugit impedit ducimus aperiam, tempore facilis. Reprehenderit pariatur minima odit dicta libero omnis quos deleniti deserunt sint sunt iusto, porro rerum eos ipsam quasi maiores facere. Praesentium, nam perspiciatis. Eos, esse ut! Accusamus quidem id commodi facere suscipit illum consectetur tempore molestiae, nulla, debitis animi. Voluptatem laudantium voluptatibus quo quidem quasi consequuntur aut repellendus facilis quam eveniet cumque, eius debitis velit. Exercitationem delectus eos nobis assumenda nesciunt, fugit aspernatur laudantium mollitia. Tenetur facere ratione error amet assumenda fugiat dolore eum est quaerat dolor! Architecto velit eum rerum veniam sint dolorem sapiente temporibus dolorum placeat, saepe ipsum fugiat magnam alias voluptates? Sit nesciunt hic laboriosam omnis vitae molestias ratione ad quasi harum et ipsa alias tempora voluptatum architecto libero id illo, quaerat impedit aperiam qui numquam?</p>
+                <br><br>
+                <button type="button">Download CV</button>
             </div>
         </div>
     </section>
@@ -112,52 +114,68 @@
     <section id="Kompetencer">
         <h1 class="heading">Kompetencer</h1>
         <div class="row">
-          <div class="box">
-            <img src="images/some.png" alt="some">
-            <h2 class="heading">SOME</h2>
-            <ul>
-              <li><span>Skabe kreativt, engagerende og målgruppeorienteret indhold</span></li>
-              <li><span>Stærke skriftlige og mundtlige kommunikationsevner</span></li>
-              <li><span>Udvikle og implementere effektive mediestrategier</span></li>
-              <li><span>Grundlæggende viden om SEO-principper og SEM-teknikker</span></li>
-              <li><span>Aktivt engageret i Sociale medier og online tendenser, samt ændringer i algoritmer og funktioner</span></li>
-            </ul>
-          </div>
-          <div class="box">
-            <img src="images/ux.png" alt="ux/ui">
-            <h2 class="heading">UX/UI</h2>
-            <ul>
-              <li><span>Design af intuitive brugergrænseflader</span></li>
-              <li><span>Skabe æstetisk tiltalende designs</span></li>
-              <li><span>Indsamling og analyse af brugerdata</span></li>
-              <li><span>Oprettelse af wireframes og prototyper</span></li>
-              <li><span>Erfaring med designværktøjer Figma og Adobe XD</span></li>
-            </ul>
-          </div>
-          <div class="box">
-            <img src="images/camera.png" alt="foto">
-            <h2 class="heading">Foto</h2>
-            <ul>
-              <li><span>Portræt og eventfotografering</span></li>
-              <li><span>Billedredigering og retouching med Adobe Photoshop og Lightroom</span></li>
-              <li><span>Skabe visuelt tiltalende kompositioner</span></li>
-              <li><span>Beherskelse af lysopsætning med naturlig og kunstig belysning</span></li>
-              <li><span>Grundlæggende kendskab til DSLR- og spejlløse kameraer</span></li>
-            </ul>
-          </div>
-          <div class="box">
-            <img src="images/video.png" alt="videocam">
-            <h2 class="heading">Video</h2>
-            <ul>
-              <li><span>Erfaring med optagelse af fiktive historier samt dokumentaroptagelser</span></li>
-              <li><span>Videoredigering og farvekorrektion i Adobe Premiere Pro, Final Cut Pro og Avid Media Composer</span></li>
-              <li><span>Beherskelse af naturlig og kunstig belysning</span></li>
-              <li><span>Erfaring med mikrofoner og lydredigering</span></li>
-              <li><span>Planlægning og gennemførelse af videoprojekter</span></li>
-            </ul>
-          </div>
+            <div class="box">
+                <div class="content">
+                    <img src="images/some.png" alt="some">
+                    <div class="text">
+                        <h2 class="heading">SOME</h2>
+                        <ul>
+                            <li><span>Skabe kreativt, engagerende og målgruppeorienteret indhold</span></li>
+                            <li><span>Udvikle og implementere effektive mediestrategier</span></li>
+                            <li><span>Grundlæggende viden om SEO-principper og SEM-teknikker</span></li>
+                            <li><span>Aktivt engageret i Sociale medier og online tendenser, samt ændringer i algoritmer og funktioner</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <img src="images/ux.png" alt="ux/ui">
+                    <div class="text">
+                        <h2 class="heading">UX/UI</h2>
+                        <ul>
+                            <li><span>Design af intuitive brugergrænseflader</span></li>
+                            <li><span>Skabe æstetisk tiltalende designs</span></li>
+                            <li><span>Indsamling og analyse af brugerdata</span></li>
+                            <li><span>Oprettelse af wireframes og prototyper</span></li>
+                            <li><span>Erfaring med designværktøjer Figma og Adobe XD</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <img src="images/camera.png" alt="foto">
+                    <div class="text">
+                        <h2 class="heading">Foto</h2>
+                        <ul>
+                            <li><span>Portræt og eventfotografering</span></li>
+                            <li><span>Billedredigering og retouching med Adobe Photoshop og Lightroom</span></li>
+                            <li><span>Skabe visuelt tiltalende kompositioner</span></li>
+                            <li><span>Beherskelse af lysopsætning med naturlig og kunstig belysning</span></li>
+                            <li><span>Grundlæggende kendskab til DSLR- og spejlløse kameraer</span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <img src="images/video.png" alt="videocam">
+                    <div class="text">
+                        <h2 class="heading">Video</h2>
+                        <ul>
+                            <li><span>Erfaring med optagelse af fiktive historier samt dokumentaroptagelser</li>
+                            <li><span>Videoredigering og farvekorrektion i Adobe Premiere Pro, Final Cut Pro og Avid Media Composer</li>
+                            <li><span>Beherskelse af naturlig og kunstig belysning</li>
+                            <li><span>Erfaring med mikrofoner og lydredigering</li>
+                            <li><span>Planlægning og gennemførelse af videoprojekter</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-      </section>
+    </section>
+    
       
 
 <section id="contact">
@@ -165,10 +183,15 @@
     <form action="" class="form">
         <input type="text" name="name" class="input" placeholder="Dit navn">
         <input type="email" name="email" class="input" placeholder="Din E-mail">
-        <textarea name="message" id="message" cols="70" rows="20" placeholder="Skriv din besked her.."></textarea>
+        <textarea name="message" id="message" cols="70" rows="10" placeholder="Skriv din besked her.."></textarea>
         <input type="submit" value="Send" id="submit">
     </form>
 </section>
+
+<footer>
+    <p>Rose Østli Talbo</p>
+    <p><a href="mailto:roseoet@gmail.com.com">Roseoet@gmail.com.com</a></p>
+</footer>
 
 </body>
 </html>
