Start på mobilversion

--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
 </head>
 <body>
     <nav class="navbar">
-        <ul>
-            <li><a href="#Projekter">Projekter</a></li>
-            <li><a href="#om">Om mig</a></li>
-            <li><a href="#Kompetencer">Kompetencer</a></li>
-            <li><a href="#contact">Kontakt</a></li>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="burger-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </label>
+        <ul class="nav-links">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#Projekter">Projekter</a></li>
+          <li><a href="#om">Om mig</a></li>
+          <li><a href="#Kompetencer">Kompetencer</a></li>
+          <li><a href="#contact">Kontakt</a></li>
         </ul>
-    </nav>
+      </nav>
 
 <section id="home">
         <h1 class="heading">Hejsa,</h1>
@@ -104,8 +111,15 @@
             <img src="images/om.png" alt="mig">
             <div class="navn">
                 <h2>Rose Østli Talbo</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolor vero cum est repudiandae pariatur non delectus voluptatem veniam eaque illum vitae atque sit at fugit impedit ducimus aperiam, tempore facilis. Reprehenderit pariatur minima odit dicta libero omnis quos deleniti deserunt sint sunt iusto, porro rerum eos ipsam quasi maiores facere. Praesentium, nam perspiciatis. Eos, esse ut! Accusamus quidem id commodi facere suscipit illum consectetur tempore molestiae, nulla, debitis animi. Voluptatem laudantium voluptatibus quo quidem quasi consequuntur aut repellendus facilis quam eveniet cumque, eius debitis velit. Exercitationem delectus eos nobis assumenda nesciunt, fugit aspernatur laudantium mollitia. Tenetur facere ratione error amet assumenda fugiat dolore eum est quaerat dolor! Architecto velit eum rerum veniam sint dolorem sapiente temporibus dolorum placeat, saepe ipsum fugiat magnam alias voluptates? Sit nesciunt hic laboriosam omnis vitae molestias ratione ad quasi harum et ipsa alias tempora voluptatum architecto libero id illo, quaerat impedit aperiam qui numquam?</p>
-                <br><br>
+                <br>
+                <p> Hej, mit navn er Rose, og jeg er en passioneret multimediedesigner med fokus på sociale medier, brugeroplevelse og interface-design samt fotografi og videoproduktion. Jeg er 27 år gammel og befinder mig i øjeblikket på første semester af multimediedesignuddannelsen på UCL.
+                    Min interesse for multimediedesign blev for alvor vakt under mine tidligere studier i medievidenskab på SDU, hvor jeg nåede op til 4. semester, men jeg følte mig draget mod det mere praktiske og kreative aspekt af medieproduktion. Dette førte mig til at skifte til multimediedesign, hvor jeg nu kan kombinere min teoretiske baggrund med praktisk erfaring og kreativ udfoldelse.
+                    Med min baggrund i medievidenskab og nuværende fokus på multimediedesign, har jeg udviklet en bred vifte af kompetencer inden for brugeroplevelser, research, test og designprocesser. Jeg trives i skæringspunktet mellem teknologi og kreativitet og elsker at skabe engagerende og brugervenlige digitale oplevelser.
+                    Udover min passion for digitalt design har jeg en særlig kærlighed til fotografi og videoproduktion. Jeg elsker at fortælle historier gennem visuelle medier og har erfaring med alt fra konceptudvikling og optagelse til redigering og postproduktion.
+                    Med min blanding af teoretisk viden og praktiske færdigheder søger jeg altid nye udfordringer og muligheder inden for multimediedesign.
+                    Jeg ser frem til at dele mine projekter og erfaringer med jer og fortsætte med at vokse og udvikle mig som multimediedesigner.
+                    </p>
+                <br>
                 <button type="button">Download CV</button>
             </div>
         </div>
