--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
         <h1 class="heading">Hejsa,</h1>
         <br>
         <h1 class="heading">jeg er Rose</h1>
+        <br><br>
+        <h2>Velkommen til mit portfolie</h2>
     <div class="images">
         <img src="shapes3.png" alt="shapes" class="shape">
         <img src="bgcut.png" alt="mig" class="bgcut">
     </div>
+</section>
+
+<section id="home-mobil">
+    <img src="images/bg2.png" alt="mig">
 </section>
 
 <section id="Projekter">
@@ -108,7 +114,7 @@
     <section id="om">
         <h1 class="heading">Om mig</h1>
         <div class="om">
-            <img src="images/om.png" alt="mig">
+            <img src="images/mig1.png" alt="mig">
             <div class="navn">
                 <h2>Rose Østli Talbo</h2>
                 <br>
