--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
 </head>
 <body>
     <nav class="navbar">
-        <input type="checkbox" id="menu-toggle" class="menu-toggle">
-        <label for="menu-toggle" class="burger-menu">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </label>
         <ul class="nav-links">
           <li><a href="#home">Home</a></li>
           <li><a href="#Projekter">Projekter</a></li>
@@ -184,11 +178,11 @@
                     <div class="text">
                         <h2 class="heading">Video</h2>
                         <ul>
-                            <li><span>Erfaring med optagelse af fiktive historier samt dokumentaroptagelser</li>
-                            <li><span>Videoredigering og farvekorrektion i Adobe Premiere Pro, Final Cut Pro og Avid Media Composer</li>
-                            <li><span>Beherskelse af naturlig og kunstig belysning</li>
-                            <li><span>Erfaring med mikrofoner og lydredigering</li>
-                            <li><span>Planlægning og gennemførelse af videoprojekter</li>
+                            <li><span>Erfaring med optagelse af fiktive historier samt dokumentaroptagelser</span></li>
+                            <li><span>Videoredigering og farvekorrektion i Adobe Premiere Pro, Final Cut Pro og Avid Media Composer</span></li>
+                            <li><span>Beherskelse af naturlig og kunstig belysning</span></li>
+                            <li><span>Erfaring med mikrofoner og lydredigering</span></li>
+                            <li><span>Planlægning og gennemførelse af videoprojekter</span></li>
                         </ul>
                     </div>
                 </div>
@@ -200,7 +194,7 @@
 
 <section id="contact">
     <h1 class="heading">Kontakt mig</h1>
-    <form action="" class="form">
+    <form action="#" class="form">
         <input type="text" name="name" class="input" placeholder="Dit navn">
         <input type="email" name="email" class="input" placeholder="Din E-mail">
         <textarea name="message" id="message" cols="70" rows="10" placeholder="Skriv din besked her.."></textarea>
